--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+/* background color */
+.navbar-bgc {
+    background-color: #252536;
+}
+
 /* Generics */
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -61,3 +66,4 @@ body {
 } */
 
 /* Utilities */
+/* in navbar */
