reviewed main structure

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,12 @@ table .badge.text-bg-warning {
     color: #fff !important;
 }
 
+#user-support .card{
+    min-height: var(--mh-md)
+}
+
+
+
 
 /* RESPONSIVE */
 /* for lg dimension of window */
