reviewed navbar toggler when focus

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,9 @@ body {
 
 /* Utilities */
 /* in navbar */
+.navbar-toggler:focus {
+    box-shadow: 0 0 0 1px;
+}
 
 /* in books-cat  */
 table th:last-child {
