added new-book structure, text and style

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,16 @@ table .badge.text-bg-warning {
     color: #fff !important;
 }
 
+/* in new-book.html */
+form#book-reser textarea {
+    height: 100px;
+    resize: none;
+}
+
+.nota-form {
+    color: #888;
+}
+
 
 
 
